# ACCA2026

./: .gitignore  README.md  path_making.py
src/adaptive_clustering_msgs/: CMakeLists.txt  package.xml
src/cone_fusion/: CMakeLists.txt  package.xml
src/cone_fusion/src/: Read.me  fusion_conetracking.cpp  fusion_node.cpp  tf_traffic.cpp  time_test.cpp  traffic_fusion.cpp
src/erp42/erp42_control/: package.xml  setup.py
src/erp42/erp42_control/config/: 0827_school.osm  2024_kcity_bonsun_0828.osm  map.yaml  pickup.py
src/erp42/erp42_control/erp42_control/: Modifier_param.py  cone_yw.py  controller_cone.py  controller_delivery_mj.py  controller_obstacle.py  controller_parking.py  controller_parking_ys.py  controller_pickup_mj.py  controller_stop_line.py  controller_traffic_light.py  controller_uturn.py  controller_uturn_car2cone.py  controller_uturn_ys.py  pid_tunning.py  pure_pursuit.py  stanley.py  stanley_cone.py  state_machine.py  viewer.py  ziegler_nichols_pi_tuning.py
src/erp42/erp42_msgs/msg/: ControlMessage.msg
src/etc/hw1/: package.xml  setup.py
src/etc/hw1/hw1/: publish_node.py  subscribe_node.py
src/etc/hw1/launch/: hw1.launch.py
src/etc/hw1_c/: CMakeLists.txt  package.xml
src/etc/hw1_c/launch/: hw1_c.launch.py
src/etc/hw1_c/src/: pub_node.cpp  sub_node.cpp
src/fusion/: 0711cone 카메라.txt  CMakeLists.txt  package.xml
src/fusion/src/: cropbox_bs.cpp  cropbox_bum.cpp  cropbox_ys.cpp  fusion_bs_pointstamped_3cam.cpp  image_concat_bs.cpp  uturn_24_crop_param.txt
src/lidar_localization_ros2-humble/: CMakeLists.txt
src/lidar_localization_ros2-humble/include/pcl_localization/: pcl_localization_component.hpp
src/lidar_localization_ros2-humble/launch/: pcl_localization.launch.py  pcl_localization_lat.launch.py
src/lidar_localization_ros2-humble/param/: localization.yaml
src/lidar_localization_ros2-humble/rviz/: localization.rviz
src/lidar_localization_ros2-humble/src/: pcl_localization_component.cpp  pcl_localization_component_lat.cpp
src/localization/: localization_메모  package.xml  readme.md  setup.py
src/localization/config/: ekf_global.yaml  ekf_local.yaml  map_anchor.yaml
src/localization/launch/: dual_ekf_localization.launch.py  ekf_localization.launch.py  kalman_localization.launch (copy).py  kalman_localization.launch.py  navsat_transform.launch.py  sensor.launch.py  tunnel.launch.py  ys_localization.launch.py
src/localization/localization/: DB.py  bicycle_erp_twist_world.py  bicycle_mod_heading_estimate.py  ekf_global_initializer.py  ekf_local_initializer.py  erp_twist.py  erp_twist_world.py  fastlio_odometry_adapter.py  gps_odom_dummy.py  gps_to_odometry.py  gps_variance_filter.py  imu_nwu_adapter.py  logger.py  odom_map_republisher.py  pcd_map_publisher.py  realtime_plotter.py  rmse_analyzer.py  rotate_yaw.py  rotate_yaw_cone.py  rotate_yaw_lat (copy).py  rotate_yaw_lat.py  rotate_yaw_ys.py  wheel_odometry_erp.py  wheel_odometry_steer.py
src/localization/params/: navsat_transform.yaml  param_ekf (copy).yaml  param_ekf.yaml  param_ekf_high_ndt.yaml  param_ekf_tunnel.yaml  param_ekf_with_ndt.yaml  param_ekf_ys.yaml
src/localization/params/2023_acca_param/: param_ekf2.yaml  param_ekf_cone_tracking.yaml  param_ekf_fail_import.yaml
src/localization/summary/: README.md  topic_summary.md  usage_walkthrough.md
src/localization/urdf/: robot.urdf (copy).xacro  robot.urdf_cone.xacro  robot.urdf_ys.xacro
src/localization_cpp/: CMakeLists.txt  package.xml
src/localization_cpp/src/: gps.cpp  gps_dummy.cpp  gps_odometry.cpp  rotate_yaw.cpp  rotate_yaw_backup_0930.cpp
src/ndt_localization/: CMakeLists.txt  package.xml
src/ndt_localization/src/: ndt_localization_node.cpp
src/path_making/: package.xml  setup.cfg  setup.py
src/path_making/path_making/: DB.py  db_read.py  db_read_2.py  db_read_3.py  db_write.py  marker.py  path_collector.py  path_making.py  path_making_bs.py  path_making_estop.py  path_making_split.py  path_separate.py
src/path_plan_cone/: package.xml  setup.cfg  setup.py
src/path_plan_cone/path_plan_cone/: del_test_유니큐빅.py  del_test_큐빅만.py  path_cone (another copy).py  path_cone (copy).py  path_cone.py  path_cone_mpc.py  path_cone_mpc_backup_0929.py  path_cone_mpc_backup_1008.py  path_cone_o.py
src/pointcloud_visualizer/: CMakeLists.txt  package.xml
src/pointcloud_visualizer/src/: pointcloud_visualizer_node.cpp
src/robot_localization/include/robot_localization/: navsat_transform.hpp
src/robot_localization/launch/: ekf.launch.py  navsat_transform.launch.py
src/robot_localization/params/: ekf.yaml  ekf_0802.yaml  navsat_transform.yaml
src/robot_localization/src/: navsat_transform.cpp  navsat_transform_node.cpp
src/sensor/: Xsens_MTi_ROS_Driver_and_Ntrip_Client.tar.xz
src/sensor/Xsens_MTi_ROS_Driver_and_Ntrip_Client/src/xsens_mti_ros2_driver/: package.xml
src/sensor/Xsens_MTi_ROS_Driver_and_Ntrip_Client/src/xsens_mti_ros2_driver/param/: xsens_mti_node.yaml
src/sensor/avt_vimba_camera-release/: CMakeLists.txt
src/sensor/avt_vimba_camera-release/launch/: mono_camera.launch.py
src/sensor/avt_vimba_camera-release/src/: avt_vimba_camera.cpp
src/sensor/erp42_communication/erp42_communication/: erp42_serial.py
src/tf/: CMakeLists.txt  package.xml
src/tf/src/: cone_pose_transform.cpp  cone_pose_transform_ys.cpp  localization_path_tf.cpp  map_anchor_recorder.cpp  map_odom_tf_publisher_static.cpp  map_odom_tf_publisher_static_bs.cpp  map_odom_tf_publisher_static_tunnel.cpp  odom2map.cpp  odom_baselink_tf_publisher.cpp  odometry_map_frame.cpp
src/tf_cone/: CMakeLists.txt  package.xml
src/tf_cone/src/: cone_in_odom_frame (copy).cpp  cone_in_odom_frame.cpp  cone_in_odom_frame_count.cpp  cone_poses_in_odomframe.cpp
src/yolo/: package.xml  setup.py
src/yolo/models/: export_onnx.py  traffic_light.names
src/yolo/yolo/: Read.me  check_string.py  check_traffic.py  cone.py  image_concat_trafficlight.py  traffic.py  traffic_light.py  traffic_light_logitech.py  traffic_light_manta.py
src/yolo_msg/: CMakeLists.txt  package.xml
src/yolo_msg/msg/: BoundingBox.msg  TrafficSign.msg
(+26 files in other folders)
