<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion</name>
  <version>0.0.0</version>
  <description>Byeongseok's Fusion package</description>
  <maintainer email="pjodlqudtjr@gmail.com">Byeongseok</maintainer>
  <license>ACCA 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eigen3</depend>
  <depend>visuatlization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

 