<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_visualizer</name>
  <version>0.0.0</version>
  <description>PointCloud Visualizer for RViz2</description>
  <maintainer email="hovin@todo.todo">hovin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>PCL</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
