<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf</name>
  <version>0.0.0</version>
  <description>Map to odom static TF publisher</description>
  <maintainer email="gjs@todo.todo">gjs</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>seonsor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>Eigen3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
