<?xml version="1.0"?>
<package format="3">
  <name>yolo_msg</name>
  <version>0.0.1</version>
  <description>Custom message package for YOLO bounding box results</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>  <!-- ✅ 이 줄 추가 -->

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
